# elasticity_project

./: README.md  par_program.cpp  seq_program.cpp
parallel_elasticity/: CMakeLists.txt  par_program.cpp
sequential_elasticity/: CMakeLists.txt  seq_program.cpp
